[package]
name = "rcli"
version = "0.1.0"
authors = ["Eric X <xiemulei@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
zxcvbn = "3"
base64 = "0.22"
blake3 = "1.5.4"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "fs"] }
axum = { version = "0.7", features = ["http2", "query", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["fs"] }
